--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -997,3 +997,10 @@ isbn={9780262039246},
   howpublished={\url{https://huggingface.co/blog/ethics-soc-7}},
   year={2024}
 }
+
+@article{drouin2024workarena,
+  title={WorkArena: How Capable Are Web Agents at Solving Common Knowledge Work Tasks?},
+  author={Drouin, Alexandre and Gasse, Maxime and Caccia, Massimo and Laradji, Issam H. and Del Verme, Manuel and Marty, Tom and Boisvert, L{\'e}o and Thakkar, Megh and Cappart, Quentin and Vazquez, David and Chapados, Nicolas and Lacoste, Alexandre},
+  journal={arXiv preprint arXiv:2403.07718},
+  year={2024}
+}
