Added new methods papers to exploration, RL section. Added a new section for Multitask foundation models

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -140,11 +140,16 @@ The first category of work does not train the LLM backbone, but relies on innova
 
 Because base VLMs and LLMs are trained on typical web images and text, certain text and images may be out of distribution and models will struggle on these tasks <d-cite key="rahmanzadehgervi2024vision"></d-cite>. This is often the case for web tasks as well, so several works have looked to train models for this task (e.g xLAM <d-cite key="zhang2024xlam"></d-cite>). CogAgent <d-cite key="hong2024cogagent"></d-cite> for example adds a high-resolution image stack to CogVLM <d-cite key="wang2023cogvlm"></d-cite> and finetunes on a large-scale dataset of GUI and OCR tasks. Similarly, OS-ATLAS <d-cite key="wu2024atlas"></d-cite> create a large GUI grounding corpus and finetune Qwen2-VL <d-cite key="wang2024qwen2"></d-cite> and InternVL-2 <d-cite key="chen2024far"></d-cite> to better perform on these tasks.
 
-#### RL Finetuning
+#### RL/Exploration Finetuning
 
-Similarly, there have been many works looking at automatic exploration or web and OS environments for finetuning <d-cite key="ou2024synatra,patel2024large"></d-cite>. These methods interact with the OS or Web environment directly to then update the model. In <d-cite key="patel2024large"></d-cite>, traces in the environment are created synthetically by either using the dataset training set or prompting an LLM for a task, using the base LLM to generate an actions in the environment, then using another LLM to self-critique to determine if the task was accomplished successfully. Similarly <d-cite key="murty2024nnetscape"></d-cite> generates synthetic traces by first starting with an environment trace and then labeling the task in hindsight. In both of these works, the synthetic datasets are used for supervised finetuning of a base LLM model for the task.
+Similarly, there have been many works looking at automatic exploration or web and OS environments for finetuning <d-cite key="ou2024synatra,patel2024large,trabucco2025insta,gandhi2025go,yangself,ma2025autodata"></d-cite>. These methods interact with the OS or Web environment directly to then update the model. In <d-cite key="patel2024large"></d-cite>, traces in the environment are created synthetically by either using the dataset training set or prompting an LLM for a task, using the base LLM to generate an actions in the environment, then using another LLM to self-critique to determine if the task was accomplished successfully. Similarly <d-cite key="murty2024nnetscape"></d-cite> generates synthetic traces by first starting with an environment trace and then labeling the task in hindsight. In all of these works, the synthetic datasets are used for supervised finetuning of a base LLM model for the task.
 
-Most recently, WEBRL <d-cite key="qi2024webrl"></d-cite> has adopted a full RL training loop for exploring and fine-tuning base models for web agents. Like other works, it uses a base LLM to generate instructions, executes using its current model, and uses a critic LLM to determine success or failure which is then used as a reward for reinforcement learning. It also employs KL smoothing and a replay buffer only keeping successful trajectories to avoid catastrophic forgetting.
+Most recently, WEBRL <d-cite key="qi2024webrl"></d-cite> has adopted a full RL training loop for exploring and fine-tuning base models for web agents. Like other works, it uses a base LLM to generate instructions, executes using its current model, and uses a critic LLM to determine success or failure which is then used as a reward for reinforcement learning. It also employs KL smoothing and a replay buffer only keeping successful trajectories to avoid catastrophic forgetting. For datasets with direct environment rewards, other papers are able to directly finetune agents with RL<d-cite key="lai2025computerrl"></d-cite>.
+
+### Multi-task Agent Foundation Models
+
+Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="zot2025multimodal,yang2025magma"></d-cite>. In <d-cite key="zot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings.
+
 
 ### Firmament
 
@@ -253,4 +258,4 @@ For a more thorough discussion of the ethical issues involved in agents, the blo
 
 ## Acknowledgments
 
-This survey was adapted from the original interactive web version created by anonymous authors. As the authors noted, they tried to take advantage of the medium of the web specifically to make their survey a bit different and a bit more interactive for readers. Claude Sonnet 4 was used to help build the original website. Special thanks to anonymous contributors who provided valuable feedback and helped debug browser compatibility issues.
+This survey was adapted from the original interactive web version created by anonymous authors. We tried to take advantage of the medium of the web specifically to make the survey a bit different and more interactive for readers. In addition, certain parts of the survey, such as the list of datasets would simply not have worked in a normal linear blog. Claude Sonnet 4 was used to help build the website. Special thanks to anonymous contributors who provided valuable feedback and helped debug browser compatibility issues.
