Added more papers to methods, discussion

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -142,9 +142,9 @@ Because base VLMs and LLMs are trained on typical web images and text, certain t
 
 #### RL/Exploration Finetuning
 
-Similarly, there have been many works looking at automatic exploration or web and OS environments for finetuning <d-cite key="ou2024synatra,patel2024large,trabucco2025insta,gandhi2025go,yangself,ma2025autodata"></d-cite>. These methods interact with the OS or Web environment directly to then update the model. In <d-cite key="patel2024large"></d-cite>, traces in the environment are created synthetically by either using the dataset training set or prompting an LLM for a task, using the base LLM to generate an actions in the environment, then using another LLM to self-critique to determine if the task was accomplished successfully. Similarly <d-cite key="murty2024nnetscape"></d-cite> generates synthetic traces by first starting with an environment trace and then labeling the task in hindsight. In all of these works, the synthetic datasets are used for supervised finetuning of a base LLM model for the task.
+Similarly, there have been many works looking at automatic exploration or web and OS environments for finetuning <d-cite key="ou2024synatra,patel2024large,trabucco2025insta,gandhi2025go,yangself,ma2025autodata,xiao2025ui"></d-cite>. These methods interact with the OS or Web environment directly to then update the model. In <d-cite key="patel2024large"></d-cite>, traces in the environment are created synthetically by either using the dataset training set or prompting an LLM for a task, using the base LLM to generate an actions in the environment, then using another LLM to self-critique to determine if the task was accomplished successfully. Similarly <d-cite key="murty2024nnetscape"></d-cite> generates synthetic traces by first starting with an environment trace and then labeling the task in hindsight. In all of these works, the synthetic datasets are used for supervised finetuning of a base LLM model for the task.
 
-Most recently, WEBRL <d-cite key="qi2024webrl"></d-cite> has adopted a full RL training loop for exploring and fine-tuning base models for web agents. Like other works, it uses a base LLM to generate instructions, executes using its current model, and uses a critic LLM to determine success or failure which is then used as a reward for reinforcement learning. It also employs KL smoothing and a replay buffer only keeping successful trajectories to avoid catastrophic forgetting. For datasets with direct environment rewards, other papers are able to directly finetune agents with RL<d-cite key="lai2025computerrl"></d-cite>.
+WEBRL <d-cite key="qi2024webrl"></d-cite> adopted a full RL training loop for exploring and fine-tuning base models for web agents. Like other works, it uses a base LLM to generate instructions, executes using its current model, and uses a critic LLM to determine success or failure which is then used as a reward for reinforcement learning. It also employs KL smoothing and a replay buffer only keeping successful trajectories to avoid catastrophic forgetting. For datasets with direct environment rewards, other papers are able to directly finetune agents with RL<d-cite key="lai2025computerrl,vattikonda2025train"></d-cite>.
 
 ### Multi-task Agent Foundation Models
 
@@ -153,9 +153,9 @@ Most recently, a very popular approach has been to build new foundation models w
 
 ### Firmament
 
-Another critical part of web agent architectures are the control flow state machines and prompting techniques (which we here call the **firmament** but others might call scaffolding). This incorporates things such as prompting strategies such as prompting agents to give responses in code <d-cite key="wangexecutable"></d-cite>, adding modules such as self reflection, episodic memory of related examples in context <d-cite key="lutz2024wilburadaptiveincontextlearning,murty2024bagel,sarch2024ical,wang2024agentworkflowmemory"></d-cite>, hierarchical planning modules, online web search and narrative planning <d-cite key="agashe2024agent"></d-cite>.
+Another critical part of web agent architectures are the control flow state machines and prompting techniques (which we here call the **firmament** but others might call scaffolding). This incorporates things such as prompting strategies such as prompting agents to give responses in code <d-cite key="wangexecutable"></d-cite>, adding modules such as self reflection, episodic memory of related examples or other information synthesized from past experience <d-cite key="lutz2024wilburadaptiveincontextlearning,murty2024bagel,sarch2024ical,wang2024agentworkflowmemory,limobileuse,wang2025inducing"></d-cite>, hierarchical planning modules, online web search and narrative planning <d-cite key="agashe2024agent"></d-cite>.
 
-One interesting area is in incorporating test-time search into the agent <d-cite key="putta2024agent,Yu2024ExACTTA"></d-cite>. <d-cite key="koh2024tree"></d-cite> does this by doing an A*-like exploration of web actions, picking a state to expand at each step and considering the possible next states the agent could land in. Similarly, ExACT <d-cite key="Yu2024ExACTTA"></d-cite> incorporates Reflective Monte Carlo Tree Search (R-MCTS), a variation on MCTS at test time, using reflection to evaluate to estimate state values. Similarly WebPilot <d-cite key="zhang2024webpilotversatileautonomousmultiagent"></d-cite> adopts an MCTS-like approach, using multiple LLMs acting in different capacities as Explorer, Verifier, Appraiser, and Controller. <d-cite key="gu2024your"></d-cite> does this with model-based planning rather than a full search in the environment.
+One interesting area is in incorporating test-time search into the agent <d-cite key="putta2024agent,Yu2024ExACTTA"></d-cite>. <d-cite key="koh2024tree"></d-cite> does this by doing an A*-like exploration of web actions, picking a state to expand at each step and considering the possible next states the agent could land in. Similarly, ExACT <d-cite key="Yu2024ExACTTA"></d-cite> incorporates Reflective Monte Carlo Tree Search (R-MCTS), a variation on MCTS at test time, using reflection to evaluate to estimate state values. Similarly WebPilot <d-cite key="zhang2024webpilotversatileautonomousmultiagent"></d-cite> adopts an MCTS-like approach, using multiple LLMs acting in different capacities as Explorer, Verifier, Appraiser, and Controller. <d-cite key="gu2024your"></d-cite> does this with model-based planning rather than a full search in the environment. Other works such as <d-cite key="hu2025owl"></d-cite> will similarly employ explicit multi-agent systems to break down and execute different parts of a task.
 
 Another important aspect of all of these frameworks is how they specifically interact with the Web or OS environment itself. For the representation of the input, there has been great experimentation ranging from set of marks <d-cite key="yang2023set"></d-cite>, where an id is overlaid on the UI element of interest <d-cite key="bonatti2024windows,xie2024osworld"></d-cite>, accessibility trees, built in features in operating systems and browsers which tag UI elements with text <d-cite key="cao2024spider2,koh2024visualwebarena,pan2024autonomous,pan2024webcanvas"></d-cite>, HTML <d-cite key="cao2024spider2,qi2024webrl"></d-cite> often reduced or filtered in some way such as by using a Document Object Model (DOM) tree <d-cite key="deng2024mind2web,kapoor2024omniact,koh2024visualwebarena"></d-cite> or even the raw screenshots <d-cite key="gou2024navigating,hong2024cogagent,xie2024osworld"></d-cite>. Often several of these input types will be combined together.
 
@@ -163,15 +163,15 @@ The wide variety of inputs used by different models can often create issues with
 
 {% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/inputtype.png" class="img-fluid rounded z-depth-1" alt="Table 5 from OSWorld showing different performance based on input type" caption="Table 5 from OSWorld showing greatly different performance based on input type." %}
 
-Similarly, methods have a wide variety of ways of dealing with the action spaces in the environment. In the earliest works, the action space was at the most low-level, made up of atomic mouse (x, y) positions and click actions <d-cite key="pmlr-v70-shi17a"></d-cite>, or click and typing actions <d-cite key="liu2018reinforcement"></d-cite>. While some works such as UGround <d-cite key="gou2024navigating"></d-cite> still use these action spaces, when language model agents became the more dominant paradigm, the action space often changed to better match with the language output of LLMs. Works such as AutoWebGLM <d-cite key="lai2024autowebglm"></d-cite> or Agent S <d-cite key="agashe2024agent"></d-cite> or many others <d-cite key="abuelsaad2024agent,koh2024visualwebarena,Yu2024ExACTTA"></d-cite> allow for the language model to specify actions in templated language. In other words, it treats the computer action space as a tool <d-cite key="schick2023toolformer"></d-cite>. It still allows for clicks and typing, but rather than specify an x,y coordinate, it specifies click(id) with the id of the UI element to click on. These works also define a set of pre-defined web actions such as jump_to(url, newtab) which navigates a particular tab to a specified url so that some actions can be taken without specifying every mouse and keyboard action required.
+Similarly, methods have a wide variety of ways of dealing with the action spaces in the environment. In the earliest works, the action space was at the most low-level, made up of atomic mouse (x, y) positions and click actions <d-cite key="pmlr-v70-shi17a"></d-cite>, or click and typing actions <d-cite key="liu2018reinforcement"></d-cite>. Some works such as UGround <d-cite key="gou2024navigating"></d-cite> still use these action spaces, while other works have tried to stay grounded to the visual space without coordinates<d-cite key="wu2025gui"></d-cite>. For the most part however, when language model agents became the more dominant paradigm, the action space often changed to better match with the language output of LLMs. Works such as AutoWebGLM <d-cite key="lai2024autowebglm"></d-cite> or Agent S <d-cite key="agashe2024agent"></d-cite> or many others <d-cite key="abuelsaad2024agent,koh2024visualwebarena,Yu2024ExACTTA"></d-cite> allow for the language model to specify actions in templated language. In other words, it treats the computer action space as a tool <d-cite key="schick2023toolformer"></d-cite>. It still allows for clicks and typing, but rather than specify an x,y coordinate, it specifies click(id) with the id of the UI element to click on. These works also define a set of pre-defined web actions such as jump_to(url, newtab) which navigates a particular tab to a specified url so that some actions can be taken without specifying every mouse and keyboard action required.
 
 With these custom action spaces, prompts are used to tell the LLM the set of available actions and some kind of parser or interpreter is used to translate these language-specified actions to the environment. The input and action spaces are often tightly linked. For instance in works such as <d-cite key="zhenggpt"></d-cite>, the UI elements are labeled with ids in a way similar to set-of-marks and those same ids are then used in the action space so the agent can interact with those same elements.
 
 ### Proprietary Systems
 
-It is also worth mentioning that Web and OS control agents are not only an academic topic, but an emerging product area for AI companies. Google DeepMind has announced Project Mariner <d-cite key="projectmariner"></d-cite>, OpenAI with Operator <d-cite key="computeruseagent"></d-cite> and Anthropic with Computer Use <d-cite key="anthropicwebblog"></d-cite>. Unfortunately, some of these models are in limited release, either behind trusted user groups or premium subscriptions, making evaluation difficult.
+It is also worth mentioning that Web and OS control agents are not only an academic topic, but an emerging product area for AI companies. Google DeepMind has announced Project Mariner <d-cite key="projectmariner"></d-cite> and later Gemini 3.0 with web browsing<d-cite key="pichai2025gemini3"></d-cite> , OpenAI with Operator <d-cite key="computeruseagent"></d-cite> and Anthropic with Computer Use <d-cite key="anthropicwebblog"></d-cite> and several others <d-cite key="browseruse2024,yutori2025navigator,cohere2025agentstudio"></d-cite>. Unfortunately, some of these models are in limited release, either behind trusted user groups or premium subscriptions, making evaluation difficult.
 
-These projects have reported numbers on some popular computer use benchmarks, but none of these projects have released papers or detailed technical reports, so details about how the agents work and how the evaluations were conducted are not known. Based on the limited information released, it seems apparent that these agents correspond with the line of work described in Computer Use LM Agents, but other details such as how the base models are fine-tuned, data used for training etc are not known. Ultimately, these black-box releases are very relevant to the interest in computer use agents, but cannot be easily benchmarked or relied upon to contribute to the academic literature. This will likely continue to be a tension going forward, as it has been in the broader literature of LLMs.
+Some of these projects have reported numbers on some popular computer use benchmarks, but none of these projects have released papers or detailed technical reports, so details about how the agents work and how the evaluations were conducted are not known. Based on the limited information released, it seems apparent that these agents correspond with the line of work described in Computer Use LM Agents, but other details such as how the base models are fine-tuned, data used for training etc are not known. Ultimately, these black-box releases are very relevant to the interest in computer use agents, but cannot be easily benchmarked or relied upon to contribute to the academic literature. This will likely continue to be a tension going forward, as it has been in the broader literature of LLMs.
 
 ---
 
@@ -219,7 +219,7 @@ As mentioned earlier, many works try to solve this issue with either using an LL
 
 Another issue is environment grounding, which can take many forms. For agents which use the raw pixel input of the environment, this is a problem of visual grounding (see <d-cite key="xiao2024towards"></d-cite> for a general survey): literally, can the model understand what is in an image and where. And while many methods use non-visual representations of the current web or computer state (see Firmament), they still have the same grounding problem, but in a input space of HTML (or other non-visual space).
 
-A common qualitative issue mentioned in many papers is important UI elements not being recognized by the system, either due to a specific failure in the tool representing the input (e.g. failures of the non-visual tools used to represent the input such as Set-of-Marks <d-cite key="yang2023set"></d-cite>). Sometimes accessibility trees or DOMs for instance, contain errors or missing labels <d-cite key="gou2024navigating"></d-cite>. Works which specifically use image inputs often have the problem that the VLMs were not adequately trained on web images <d-cite key="hong2024cogagent"></d-cite> and a well-known issue in VLMs is out-of-domain image understanding <d-cite key="rahmanzadehgervi2024vision"></d-cite>. Ultimately, these issues may come down to basic issues of visual recognition, which some have used to suggest specific fine-tuning for better visual recognition of GUIs <d-cite key="hong2024cogagent,gou2024navigating,he2024webvoyager,qinghong2024showui"></d-cite>.
+A common qualitative issue mentioned in many papers is important UI elements not being recognized by the system, either due to a specific failure in the tool representing the input (e.g. failures of the non-visual tools used to represent the input such as Set-of-Marks <d-cite key="yang2023set"></d-cite>). Sometimes accessibility trees or DOMs for instance, contain errors or missing labels <d-cite key="gou2024navigating"></d-cite>. Works which specifically use image inputs often have the problem that the VLMs were not adequately trained on web images <d-cite key="hong2024cogagent"></d-cite> and a well-known issue in VLMs is out-of-domain image understanding <d-cite key="rahmanzadehgervi2024vision"></d-cite>. Ultimately, these issues may come down to basic issues of visual recognition, which some have used to suggest specific fine-tuning for better visual recognition of GUIs <d-cite key="hong2024cogagent,gou2024navigating,he2024webvoyager,qinghong2024showui,gilley2025bitterlesson"></d-cite>.
 
 #### Lack of Training Data
 
