Adding more papers, especially in datasets

--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -2146,4 +2146,10 @@ url={https://openreview.net/forum?id=BtZBwwjO5d}
   note         = {North Agent Studio. Accessed: 2024-12-05},
   organization = {Cohere}
 }
+@article{zharmagambetov2025agentdam,
+  title={Agentdam: Privacy leakage evaluation for autonomous web agents},
+  author={Zharmagambetov, Arman and Guo, Chuan and Evtimov, Ivan and Pavlova, Maya and Salakhutdinov, Ruslan and Chaudhuri, Kamalika},
+  journal={arXiv preprint arXiv:2503.09780},
+  year={2025}
+}
 
