Final changes to interactive elements and citations

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -48,7 +48,7 @@ We were originally planning to write a full survey paper with a collaborator as 
 
 So we present for you here, a computer-friendly survey of computer use survey. We hope this is a useful resource for people. Before we begin, here are some of those great surveys we recommend you check out!
 
-<iframe src="/webagentblog/assets/html/2026-04-27-web-agent/carousel.html" width="100%" height="520" frameborder="0" style="border-radius: 12px; margin: 1rem 0;"></iframe>
+<iframe class="l-page" src="/webagentblog/assets/html/2026-04-27-web-agent/carousel.html" width="100%" height="520" frameborder="0" style="border-radius: 12px; margin: 1rem 0;"></iframe>
 
 There are also a number of websites which track new papers and models such as [awesome-computer-use](https://github.com/ranpox/awesome-computer-use) which serve as an ongoing reference.
 
@@ -74,7 +74,7 @@ First, we define what we mean here by a "Computer Use" AI system or Computer Use
 
 As we discuss later on in Environments and Datasets we can define a computer use environment in a number of different ways, from an environment which is a simulation or Virtual Machine instance of an operating system, an environment which contains the text of a website(s) which can be navigated, an environment which emulates a browser to navigate and act on a live or cached version of the web or any portion or simulation of a computer that can be operated like an environment. These environments allow for any number of tasks from navigation to question answering. This definition suggests that the thing we care about is looking at works which create agents or environments with the goal of creating AI which can operate on computer systems in a manner similar to the ways humans do. This can actually incorporate many kinds of AI systems, but the most recent version of these which we discuss in detail in Models and Methods is the LLM or VLM agent on computer use environments.
 
-<iframe src="/webagentblog/assets/html/2026-04-27-web-agent/definitions.html" width="100%" height="480" frameborder="0" style="border-radius: 12px; margin: 1.5rem 0;"></iframe>
+<iframe class="l-page" src="/webagentblog/assets/html/2026-04-27-web-agent/definitions.html" width="100%" height="480" frameborder="0" style="border-radius: 12px; margin: 1.5rem 0;"></iframe>
 
 ---
 
@@ -88,7 +88,7 @@ We realize that the category "web browsing" is somewhat vague. It can include ta
 
 This list is by no means complete and likely by the time we hit publish there will be many more datasets and environments.
 
-<iframe src="/webagentblog/assets/html/2026-04-27-web-agent/observatory.html" width="100%" height="750" frameborder="0" style="border-radius: 12px; margin: 1.5rem 0;"></iframe>
+<iframe class="l-page" src="/webagentblog/assets/html/2026-04-27-web-agent/observatory.html" width="100%" height="750" frameborder="0" style="border-radius: 12px; margin: 1.5rem 0;"></iframe>
 
 While going through all of these environments and datasets, we had a number of observations we thought were important to discuss.
 
@@ -118,7 +118,12 @@ As LLMs and VLMs began to scale on massive amounts of web data and thus became f
 
 These papers are often called "agents" or "agentic" to mean that the system can take repeated actions over time by creating a finite state machine construction in such a way that the system is able to repeat a cycle of reading the task query, planning, interpreting the current input and taking actions in the environment. This bears some resemblance to the sense-think-act cycle in robotics <d-cite key="siegel2003sense"></d-cite>. To see this more clearly, see the figure below which shows a typical control flow diagram for an LLM agent on computer or web control tasks.
 
-{% include figure.liquid loading="eager" path="assets/img/2026-04-27-web-agent/FSMDiagram.png" class="img-fluid rounded z-depth-1" alt="LLM Agent Control Flow Diagram" caption="Typical control flow diagram for an LLM agent showing how control passes between differently prompted versions of the LLM/VLM and external components." %}
+<div class="pdf-figure l-page" style="margin: 1.25rem 0; text-align: center;">
+  <img src="/webagentblog/assets/img/2026-04-27-web-agent/ComputerUse.png" alt="LLM Agent Control Flow Diagram showing control passing between differently prompted versions of the LLM/VLM and external components" style="max-width: 100%; width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" loading="lazy">
+  <div style="margin-top: 0.5rem; color: #6c757d; font-size: 0.95rem;">
+    Typical control flow diagram for an LLM agent showing how control passes between differently prompted versions of the LLM/VLM and external components.
+  </div>
+</div>
 
 We can think of the diagram as showing how control passes between differently prompted versions of the LLM or VLM (a planner or step planner, an input interpreter, an action decider as well as other kinds of modules such as a reflect module) and external/non LLM components. The user query (i.e. a question or goal the agent is asked to perform) is taken as input to an LLM prompted to act as a planning module. After an initial plan, control is passed to the LLM prompted to plan each step, which calls other modules to load and interpret the input and decide the action.
 
