--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -2153,3 +2153,17 @@ url={https://openreview.net/forum?id=BtZBwwjO5d}
   year={2025}
 }
 
+@misc{zot2025multimodal,
+  title={Zot Multimodal Foundation Model},
+  author={{Zot Research Team}},
+  year={2025},
+  note={Placeholder reference}
+}
+
+@misc{xue2025illusion,
+  title={The Illusion of Evaluation in Web Agents},
+  author={Xue, A.},
+  year={2025},
+  note={Placeholder reference}
+}
+
