Removed authors note again. Fixed reference bug

--- a/_posts/2026-04-27-web-agent.md
+++ b/_posts/2026-04-27-web-agent.md
@@ -41,30 +41,6 @@ _styles: >
   }
 ---
 
-## Authors' Note
-
-We were originally planning to write a full survey paper with a collaborator as a way to get up to speed before we worked on a new project in the area (more on this soon I hope). Unfortunately, we got busy and we just got scooped. There are now quite a few papers on LLM Agents and more specifically Computer Use. This took a bit of the wind out of our sails, but we wanted to still talk about some of the stuff we learned and present it in an engaging way.
-
-So we present for you here, a computer-friendly survey of computer use survey. We hope this is a useful resource for people. Before we begin, here are some of those great surveys we recommend you check out!
-
-<iframe class="l-page" src="/webagentblog/assets/html/2026-04-27-web-agent/carousel.html" width="100%" height="520" frameborder="0" style="border-radius: 12px; margin: 1rem 0;"></iframe>
-
-There are also a number of websites which track new papers and models such as [awesome-computer-use](https://github.com/ranpox/awesome-computer-use) which serve as an ongoing reference.
-
-As you may notice we also here try to take advantage of the medium of the web specifically to make our survey a bit different and a bit more interactive for readers. Claude Sonnet 4 was used to help build this website. We hope you enjoy!
-
-## Introduction
-
-In the last few years, and particularly in the most recent past year, AI systems which operate on the web and in computer environments have become a significant topic of study, for both academia and industry. If readers skim the citations in this review, they will likely notice that many of the works are extremely recent, most within the past year.
-
-The goal of this survey is first to organize much of the historical and recent work on Computer Use Agents. First, we define exactly what we mean by "Computer Use" in What is Computer Use. We then define and categorize different environments, datasets and evaluations for Computer Use Agents in Environments and Datasets. Next, we discuss the methodological work in this area in Models and Methods focusing in particular on the recent trend of "LLM Agents" and provide an accessible explanation of this class of systems and trends within this research. Finally, we discuss ongoing trends, areas for improvement and possible safety and ethical concerns brought about by this research in Discussion.
-
-So what has shaped this sudden interest in Computer Use Agents in the first place? What goals are academic and industry researchers trying to serve? The first explanation is that the advent of extremely capable language and language and vision models (LLMs / VLMs) has made the goal of autonomous computer use agents suddenly quite plausible. These models, trained now on trillions of tokens scraped from the web, are incredibly powerful few- and zero-shot learners <d-cite key="brown2020language,kojima2022large"></d-cite> able to with little or no new training data be generally proficient at many language tasks, making them adaptable to many different problems. Computer use is not only difficult in terms of being a long-horizon sequential decision-making problem, it is also linguistically challenging and knowledge-laden. Before these large-scale training models, language problems required models to be trained from scratch, language understanding was often limited and brittle and few-shot reasoning was almost unheard of. This makes it hard to do these computer use tasks. Take a popular web use task example: booking an airline ticket. To solve the problem, you first have to be able to precisely understand a user's request: what airline they prefer, when they want to travel, etc. The agent also must have quite a bit of both commonsense and specific knowledge about airline ticket purchasing to accomplish this. The agent needs to not only understand the request and know how to navigate the airline website, it also needs to understand things like "I should not book a $10k ticket." With these capable LLMs, we not only have a backbone which has general capability that can start to make progress on the task, we have these essential commonsense capabilities to make Web Use Agents possible.
-
-While the precise timing of this work can be explained by the arrival of these capable models, we should also ask what people are trying to accomplish with computer use agents. Many papers point to automating routine, boring or time consuming tasks as a motivation. Many works list automation of tedious tasks or enhancing user experiences as a motivation. The other common motivations are accessibility; making computers and the Internet more generally accessible to those with disabilities. We elaborate on this further in Discussion.
-
----
-
 ## What is Computer Use
 
 First, we define what we mean here by a "Computer Use" AI system or Computer Use Agent. By this we mean an agent that interacts dynamically with a computer system or web interface. In the MDP formulation, an agent is a decision maker that observes an environment and takes actions <d-cite key="sutton2018reinforcement"></d-cite>.
@@ -165,7 +141,7 @@ WEBRL <d-cite key="qi2024webrl"></d-cite> adopted a full RL training loop for ex
 
 ### Multi-task Agent Foundation Models
 
-Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="zot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="zot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings.
+Most recently, a very popular approach has been to build new foundation models which include web agent data <d-cite key="szot2025multimodal,yang2025magma,liuvisualagentbench"></d-cite>. In <d-cite key="zot2025multimodal"></d-cite> they jointly train on a number of robotics tasks including computer use, simulated robotics and games. The work finetunes a multimodal language model on embodied tasks, both with supervised fine-tuning and RL, making use of a multi-embodiment action tokenizer. Similarly in Magma<d-cite key="yang2025magma"></d-cite> they train a foundation model on a variety of multimodal environments including computer use which is specifically trained for planning in embodied settings.
 
 
 ### Firmament
