--- a/assets/bibliography/2026-04-27-web-agent.bib
+++ b/assets/bibliography/2026-04-27-web-agent.bib
@@ -2152,18 +2152,10 @@ url={https://openreview.net/forum?id=BtZBwwjO5d}
   journal={arXiv preprint arXiv:2503.09780},
   year={2025}
 }
-
-@misc{zot2025multimodal,
-  title={Zot Multimodal Foundation Model},
-  author={{Zot Research Team}},
-  year={2025},
-  note={Placeholder reference}
-}
-
-@misc{xue2025illusion,
-  title={The Illusion of Evaluation in Web Agents},
-  author={Xue, A.},
-  year={2025},
-  note={Placeholder reference}
+@article{xue2025illusion,
+  title={An illusion of progress? assessing the current state of web agents},
+  author={Xue, Tianci and Qi, Weijian and Shi, Tianneng and Song, Chan Hee and Gou, Boyu and Song, Dawn and Sun, Huan and Su, Yu},
+  journal={CoLM},
+  year={2025}
 }
 
